--- a/VoronoiLib/VoronoiLib.csproj
+++ b/VoronoiLib/VoronoiLib.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.Portable.Compatibility" Version="1.0.1" />
+    <PackageReference Include="VDS.Common" Version="1.10.0" />
   </ItemGroup>
 
 </Project>
